version/0.33/_sources/api/solver/_autosummary/settings/phase_22_child.rst.txt
:orphan:

.. _phase_22_child:

phase_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_22_child
    :show-inheritance:

.. rubric:: Attributes

================================   ============================================================

Attribute                                                                               Summary

================================   ============================================================
:ref:`turbulence <turbulence_4>`       Allows to change turbulence model variables or settings.

:ref:`geometry <geometry_6>`             Allows to change geometry model variables or settings.

================================   ============================================================

.. rubric:: Included in:

==========================   ======================================

Parent                                                      Summary

==========================   ======================================
:ref:`phase_22 <phase_22>`       Domain name to define settings on.

==========================   ======================================

