version/0.38/_sources/api/solver/_autosummary/settings/phase_22_child.rst.txt
:orphan:

.. _phase_22_child:

phase_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.phase_22_child
    :show-inheritance:

.. rubric:: Attributes

========================================   ==========================================================

Attribute                                                                                     Summary

========================================   ==========================================================
:ref:`radiator <radiator_1>`                   Allows to change radiator model variables or settings.

:ref:`discrete_phase <discrete_phase_2>`                                     Discrete Phase settings.

:ref:`geometry <geometry_7>`                   Allows to change geometry model variables or settings.

========================================   ==========================================================

.. rubric:: Included in:

==========================   ======================================

Parent                                                      Summary

==========================   ======================================
:ref:`phase_22 <phase_22>`       Domain name to define settings on.

==========================   ======================================

